--- a/src/app/manager/employes/employes.component.html
+++ b/src/app/manager/employes/employes.component.html
@@ -1,193 +1,207 @@
 <app-navbar-manager></app-navbar-manager>
-<br><br><br>
+<!-- <br><br><br> -->
 
 
-<!-- <section class="section section-lg bg-gradient-default">
-    <div class="container pt-lg pb-300">
-      <div class="row text-center justify-content-center">
-        <div class="col-lg-10">
-          <h2 class="display-3 text-white">Build something</h2>
-          <p class="lead text-white">According to the National Oceanic and Atmospheric Administration, Ted, Scambos, NSIDClead scentist, puts the potentially record low maximum sea ice extent tihs year down to low ice.</p>
-        </div>
+<section class="section section-lg bg-gradient-default">
+  <div class="container pt-lg pb-300">
+    <div class="row text-center justify-content-center">
+      <div class="col-lg-10">
+        <h2 class="display-3 text-white"></h2>
       </div>
-    </div> -->
-    <!-- SVG separator -->
-    <!-- <div class="separator separator-bottom separator-skew zindex-100">
-      <svg x="0" y="0" viewBox="0 0 2560 100" preserveAspectRatio="none" version="1.1" xmlns="http://www.w3.org/2000/svg">
-        <polygon class="fill-white" points="2560 0 2560 100 0 100"></polygon>
-      </svg>
     </div>
-  </section> -->
+  </div>
+  <!-- SVG separator -->
+  <div class="separator separator-bottom separator-skew zindex-100">
+    <svg x="0" y="0" viewBox="0 0 2560 100" preserveAspectRatio="none" version="1.1" xmlns="http://www.w3.org/2000/svg">
+      <polygon class="fill-white" points="2560 0 2560 100 0 100"></polygon>
+    </svg>
+  </div>
+</section>
 
-<!-- <section class="section section-lg pt-lg-0 section-contact-us">
-    <div class="container">
-      <div class="row justify-content-center mt--300">
-        <div class="col-lg-8">
-          <div class="card bg-gradient-secondary shadow">
-            <div class="card-body p-lg-5">
-              <h4 class="mb-1">Want to work with us?</h4>
-              <p class="mt-0">Your project is very important to us.</p>
-              <div class="form-group mt-5" [ngClass]="{'focused':focus===true}">
-                <div class="input-group input-group-alternative">
-                  <div class="input-group-prepend">
-                    <span class="input-group-text"><i class="ni ni-user-run"></i></span>
-                  </div>
-                  <input class="form-control" placeholder="Your name" type="text" (focus)="focus=true" (blur)="focus=false">
-                </div>
-              </div>
-              <div class="form-group" [ngClass]="{'focused':focus2===true}">
-                <div class="input-group input-group-alternative">
-                  <div class="input-group-prepend">
-                    <span class="input-group-text"><i class="ni ni-email-83"></i></span>
-                  </div>
-                  <input class="form-control" placeholder="Email address" type="email" (focus)="focus2=true" (blur)="focus2=false">
-                </div>
-              </div>
-              <div class="form-group mb-4">
-                <textarea class="form-control form-control-alternative" name="name" rows="4" cols="80" placeholder="Type a message..."></textarea>
-              </div>
-              <div>
-                <button type="button" class="btn btn-default btn-round btn-block btn-lg">Send Message</button>
+<section class="section section-lg pt-lg-0 section-contact-us">
+  <div class="container">
+    <div class="row justify-content-center mt--300">
+      <div class="col-lg-8">
+        <div class="card bg-gradient-secondary shadow">
+          <div class="card-body p-lg-5">
+            <h4 class="mb-1">Ajouter un employé</h4>
+
+            <div class="form-group mb-4" [ngClass]="{'focused':focus===true}">
+              <div class="input-group input-group-alternative">
+                <input class="form-control" placeholder="Nom" type="text" [(ngModel)]="nom" (focus)="focus=true"
+                  (blur)="focus=false">
               </div>
             </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section> -->
-
-
-<div class="py-5 bg-secondary">
-    <div class="container">
-      <!-- Inputs (alternative) -->
-      <div class="mb-3">
-        <small class="text-uppercase font-weight-bold">Nouvel Employe</small>
-      </div>
-      <div class="row">
-          <div class="col-lg-6 col-sm-6 form-group">
-            <input type="text" placeholder="Nom" [(ngModel)]="nom" class="form-control form-control-alternative" />
-          </div>
-          <div class="col-lg-6 col-sm-6 form-group">
-            <input type="textearea" placeholder="Prénom" [(ngModel)]="prenom" class="form-control form-control-alternative" />
-          </div>
-          <div class="col-lg-4 col-sm-4 form-group">
-            <input type="email" placeholder="Email" [(ngModel)]="email" class="form-control form-control-alternative" />
-          </div>
-          <div class="col-lg-4 col-sm-4 form-group" [ngClass]="{'focused':focus===true}">
-            <input class="form-control datepicker" placeholder="Date de naissance" id="date" name="dp1" [(ngModel)]="date" ngbDatepicker #d1="ngbDatepicker" (click)="d1.toggle()" (focus)="focus=true" (blur)="focus=false" type="text" autocomplete="off"/>
-          </div> 
-          <div class="col-lg-4 col-sm-4 form-group">
-            <div class="input-group input-group-alternative mb-3">
+            <div class="form-group mb-4" [ngClass]="{'focused':focus1===true}">
+              <div class="input-group input-group-alternative">
+                <input class="form-control" placeholder="Prénom" type="text" [(ngModel)]="prenom" (focus)="focus1=true"
+                  (blur)="focus1=false">
+              </div>
+            </div>
+            <div class="form-group mb-4" [ngClass]="{'focused':focus7===true}">
+              <div class="input-group input-group-alternative">
+                <input class="form-control" placeholder="Email" type="email" [(ngModel)]="email" (focus)="focus7=true"
+                  (blur)="focus7=false">
+              </div>
+            </div>
+            <div class="input-group input-group-alternative mb-4">
               <div class="input-group-prepend">
                 <span class="input-group-text"><i class="ni ni-single-02"></i></span>
+                <span class="input-group-text">Genre</span>
               </div>
-              <select class="form-control" placeholder="Genre" [(ngModel)]="genre">
+              <select class="form-control" [(ngModel)]="genre">
                 <option value="1">Masculin</option>
                 <option value="2">Féminin</option>
                 <option value="3">Autre</option>
               </select>
             </div>
-          </div>
-                
-      </div>
 
-      
-      <div *ngFor="let alert of alerts">
-        <c-alert [type]="alert.type" [strong]="alert.strong" [message]="alert.message" [icon]="alert.icon"></c-alert>
-      </div>
-      <c-alert color="danger" *ngIf="afficherAlerteDate">La date de naissance est postérieure à la date d'aujourd'hui.</c-alert>
-      <c-alert color="danger" *ngIf="afficherAlerteChamp">Veuillez remplir tous les champs.</c-alert>
-
-      <button class="btn btn-1 btn-primary" (click)="addEmploye()" type="button">Ajouter</button> 
-    </div>
-  </div>
-
-
-  <section class="section section-lg">
-    <div class="container">
-      <div class="row justify-content-center text-center mb-lg">
-        <div class="col-lg-8">
-          <h2 class="display-3">Employés</h2>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-6 col-lg-4 mb-5 mb-lg-0"  *ngFor="let employe of employees; let i = index;">
-          <div class="px-4">
-            <img src="./assets/img/theme/team-1-800x800.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;">
-            <div class="pt-4 text-center">
-              <h5 class="title">
-                <span class="d-block mb-1">{{employe.nom}} {{employe.prenom}}</span>
-                <p><small class="h6 text-muted">{{employe.email}}</small></p>
-                <p><small class="h6 text-muted">{{employe.dateNaissance}}</small></p>
-              </h5>
-              <div class="mt-3">
-                <button (click)="open(classic1, 'modal_mini', 'sm', employe)" class="btn btn-sm btn-primary">Modifier</button>
-                <button (click)="deleteEmployee(employe._id)" class="btn btn-sm btn-warning">Supprimer</button>
+            <div class="mb-4 form-group" [ngClass]="{'focused':focus3===true}">
+              <div class="input-group">
+                <div class="input-group-prepend">
+                  <span class="input-group-text"><i class="ni ni-calendar-grid-58"></i></span>
+                </div>
+                <input class="form-control datepicker" placeholder="Date" id="date" name="dp1" [(ngModel)]="date"
+                  ngbDatepicker #d1="ngbDatepicker" (click)="d1.toggle()" (focus)="focus3=true" (blur)="focus3=false"
+                  type="text" autocomplete="off" />
               </div>
-              <div class="mt-3">
-                <button class="btn btn-sm btn-warning" (click)="redirectHoraireEmploye(employe)">Modifier l'horaire de travail</button>
-              </div>
+            </div>
+
+            <c-alert color="danger" *ngIf="afficherAlerteDate">La date de début est postérieure à la date de fin.
+            </c-alert>
+            <c-alert color="danger" *ngIf="afficherAlerteChamp">Veuillez remplir tous les champs.</c-alert>
+
+            <div>
+              <button type="button" (click)="addEmploye()"
+                class="btn btn-default btn-round btn-block btn-lg">Ajouter</button>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </section>
+  </div>
+</section>
 
 
-  <!-- Modal -->
-  <div class="col-md-4">
-    <ng-template #classic1 let-c="close" let-d="dismiss">
-      <div class="modal-content">
-        <div class="modal-body p-0">
-          <div class="card bg-secondary shadow border-0">
-            
-            <div class="card-body px-lg-5 py-lg-5">
-              <div class="text-center text-muted mb-4">
-                <small>Modifier Employe</small>
-              </div>
-              <form role="form" #serviceForm="ngForm">
-                <div class="form-group mb-3" [ngClass]="{'focused':focus2===true}">
-                  <div class="input-group input-group-alternative">
-                    <input class="form-control" [placeholder]="nomField" [(ngModel)]="nomField" type="text" (focus)="focus2=true" (blur)="focus2=false">
-                  </div>
-                </div>
-                <div class="form-group mb-3" [ngClass]="{'focused':focus3===true}">
-                    <div class="input-group input-group-alternative">
-                      <input class="form-control" [placeholder]="prenomField" [(ngModel)]="prenomField" type="text" (focus)="focus3=true" (blur)="focus3=false">
-                    </div>
-                  </div>
-                  <div class="form-group mb-3" [ngClass]="{'focused':focus4===true}">
-                    <div class="input-group input-group-alternative">
-                      <input class="form-control" [placeholder]="emailField" type="email" [(ngModel)]="emailField" (focus)="focus4=true" (blur)="focus4=false">
-                    </div>
-                  </div>
 
-                    <div class="input-group input-group-alternative mb-3">
-                      <div class="input-group-prepend">
-                        <span class="input-group-text"><i class="ni ni-single-02"></i></span>
-                      </div>
-                      <select class="form-control" [placeholder]="genreField" [(ngModel)]="genreField">
-                        <option value="1">Masculin</option>
-                        <option value="2">Féminin</option>
-                        <option value="3">Autre</option>
-                      </select>
-                    </div>
+<ng-template #popoverContent style="background-color: rgba(255, 0, 0, 0.5);">
+  <div class="nav nav-pills justify-content-start">
+    <ul ngbNav #nav2="ngbNav" type="pills" class="nav-pills">
+      <li [ngbNavItem]="1">
+        <a ngbNavLink placement="bottom" ngbTooltip="Modifier" (click)="open(classic1, 'modal_mini', 'sm', employe)">
+          <span class="nav-link-icon d-block"><i class="ni ni-atom"></i></span>
+        </a>
+      </li>
+      <li [ngbNavItem]="2">
+        <a ngbNavLink placement="bottom" ngbTooltip="Supprimer">
+          <span class="nav-link-icon d-block"><i class="ni ni-chat-round"></i></span>
+        </a>
+      </li>
+      <li [ngbNavItem]="3">
+        <a ngbNavLink placement="bottom" ngbTooltip="Modifier l'horaire de travail">
+          <span class="nav-link-icon d-block"><i class="ni ni-cloud-download-95"></i></span>
+        </a>
+      </li>
+    </ul>
+  </div>
+</ng-template>
 
-                  <div class="form-group mb-3" [ngClass]="{'focused':focus6===true}">
-                    <div class="input-group input-group-alternative">
-                        <input class="form-control datepicker" [placeholder]="dateNaissanceField" id="date" name="dp1" [(ngModel)]="dateNaissanceField" ngbDatepicker #d1="ngbDatepicker" (click)="d1.toggle()" (focus)="focus6=true" (blur)="focus6=false" type="text" autocomplete="off"/>
-                    </div>
-                  </div>
-            
-                <div class="text-center">
-                  <button type="button" (click)="updateEmployee()" class="btn btn-primary my-4">Modifier</button>
-                </div>
-              </form>
+
+
+<section class="section section-lg">
+  <div class="container">
+    <div class="row justify-content-center text-center mb-lg">
+      <div class="col-lg-8">
+        <h2 class="display-3">Employés</h2>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-6 col-lg-4 mb-5 mb-lg-0" *ngFor="let employe of employees; let i = index;">
+        <div class="px-4">
+          <img src="./assets/img/theme/team-1-800x800.jpg"
+            class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" placement="bottom"
+            [ngbPopover]="popoverContent"
+            [popoverOptions]="{ 'style': { 'background-color': 'rgba(255, 0, 0, 0.5)' } }">
+          <div class="pt-4 text-center">
+            <h5 class="title">
+              <span class="d-block mb-1">{{employe.nom}} {{employe.prenom}}</span>
+              <p><small class="h6 text-muted">{{employe.email}}</small></p>
+              <p><small class="h6 text-muted">{{employe.dateNaissance}}</small></p>
+            </h5>
+            <div class="mt-3">
+              <button (click)="open(classic1, 'modal_mini', 'sm', employe)"
+                class="btn btn-sm btn-primary">Modifier</button>
+              <button (click)="deleteEmployee(employe._id)" class="btn btn-sm btn-warning">Supprimer</button>
+            </div>
+            <div class="mt-3">
+              <button class="btn btn-sm btn-warning" (click)="redirectHoraireEmploye(employe)">Modifier l'horaire de
+                travail</button>
             </div>
           </div>
         </div>
       </div>
-    </ng-template>
+    </div>
   </div>
+</section>
 
+
+<!-- Modal -->
+<div class="col-md-4">
+  <ng-template #classic1 let-c="close" let-d="dismiss">
+    <div class="modal-content">
+      <div class="modal-body p-0">
+        <div class="card bg-secondary shadow border-0">
+
+          <div class="card-body px-lg-5 py-lg-5">
+            <div class="text-center text-muted mb-4">
+              <small>Modifier Employe</small>
+            </div>
+            <form role="form" #serviceForm="ngForm">
+              <div class="form-group mb-3" [ngClass]="{'focused':focus2===true}">
+                <div class="input-group input-group-alternative">
+                  <input class="form-control" [placeholder]="nomField" [(ngModel)]="nomField" type="text"
+                    (focus)="focus2=true" (blur)="focus2=false">
+                </div>
+              </div>
+              <div class="form-group mb-3" [ngClass]="{'focused':focus3===true}">
+                <div class="input-group input-group-alternative">
+                  <input class="form-control" [placeholder]="prenomField" [(ngModel)]="prenomField" type="text"
+                    (focus)="focus3=true" (blur)="focus3=false">
+                </div>
+              </div>
+              <div class="form-group mb-3" [ngClass]="{'focused':focus4===true}">
+                <div class="input-group input-group-alternative">
+                  <input class="form-control" [placeholder]="emailField" type="email" [(ngModel)]="emailField"
+                    (focus)="focus4=true" (blur)="focus4=false">
+                </div>
+              </div>
+
+              <div class="input-group input-group-alternative mb-3">
+                <div class="input-group-prepend">
+                  <span class="input-group-text"><i class="ni ni-single-02"></i></span>
+                </div>
+                <select class="form-control" [placeholder]="genreField" [(ngModel)]="genreField">
+                  <option value="1">Masculin</option>
+                  <option value="2">Féminin</option>
+                  <option value="3">Autre</option>
+                </select>
+              </div>
+
+              <div class="form-group mb-3" [ngClass]="{'focused':focus6===true}">
+                <div class="input-group input-group-alternative">
+                  <input class="form-control datepicker" [placeholder]="dateNaissanceField" id="date" name="dp1"
+                    [(ngModel)]="dateNaissanceField" ngbDatepicker #d1="ngbDatepicker" (click)="d1.toggle()"
+                    (focus)="focus6=true" (blur)="focus6=false" type="text" autocomplete="off" />
+                </div>
+              </div>
+
+              <div class="text-center">
+                <button type="button" (click)="updateEmployee()" class="btn btn-primary my-4">Modifier</button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </ng-template>
+</div>
