--- a/src/app/manager/services/services.component.html
+++ b/src/app/manager/services/services.component.html
@@ -3,6 +3,34 @@
   <br><br>
   <br><br> -->
 
+  <div class="alert-container">
+    <div *ngFor="let alert of alerts">
+      <ngb-alert [type]="alert.type" [dismissible]="true" (close)="close(alert)">
+        <ng-container *ngIf="alert.icon">
+          <div class="alert-inner--icon">
+            <i class="{{alert.icon}}"></i>
+          </div>
+        </ng-container>
+        <span class="alert-inner--text"> <strong>{{alert.strong}} </strong>{{ alert.message }}</span>
+      </ngb-alert>
+    </div>
+  </div>
+  
+  <style>
+    /* signup.component.scss */
+    .alert-container {
+      position: fixed;
+      top: 20px;
+      right: 20px;
+      z-index: 1000;
+      width: 300px;
+    }
+  
+    .alert {
+      margin-bottom: 10px;
+    }
+  </style>
+
 <section class="section section-lg bg-gradient-default">
   <div class="container pt-lg pb-300">
     <div class="row text-center justify-content-center">
@@ -26,6 +54,15 @@
         <div class="card bg-gradient-secondary shadow">
           <div class="card-body p-lg-5">
             <h4 class="mb-1">Ajouter un service</h4>
+            <div class="form-group mb-mt-4">
+              <ngx-file-drop dropZoneLabel="Drop files here" (onFileDrop)="dropped($event)" 
+              (onFileOver)="fileOver($event)" (onFileLeave)="fileLeave($event)">
+                  <ng-template ngx-file-drop-content-tmp let-openFileSelector="openFileSelector">
+                    <div class="mr-2">Déposer votre image ici</div>
+                    <button type="button" class="btn btn-sm btn-outline-primary" (click)="openFileSelector()">Importer image</button>
+                  </ng-template>
+              </ngx-file-drop>
+            </div>
             <div class="form-group mb-4" [ngClass]="{ focused: focus === true }">
               <div class="input-group input-group-alternative">
                 <input class="form-control" placeholder="Intitulé" type="text" [(ngModel)]="intitule"
@@ -90,13 +127,6 @@
                   </div>
                 </div>
               </div>
-              <div *ngFor="let alert of alerts">
-                <c-alert [type]="alert.type" [strong]="alert.strong" [message]="alert.message" [icon]="alert.icon"></c-alert>
-              </div>
-              
-              <c-alert color="danger" *ngIf="afficherAlerteDate">La date de début est postérieure à la date de fin.</c-alert>
-              <c-alert color="danger" *ngIf="afficherAlerteChamp">Veuillez remplir tous les champs.</c-alert>
-              <c-alert color="danger" *ngIf="afficherAlerteNumber">Numberrr.</c-alert>
 
               <button type="button" (click)="addService()" class="btn btn-default btn-round btn-block btn-lg">
                 Ajouter
@@ -115,32 +145,173 @@
     <h2>Services</h2>
     <div class="col-lg-12">
       <div class="row row-grid">
-        <div class="col-lg-4" *ngFor="let service of services">
-          <div class="card card-lift--hover shadow border-0">
+
+        <div class="col-lg-4 mb-4" *ngFor="let service of services">
+          <div class="card card-lift--hover shadow border-0 flex-fill">
             <div class="card-body py-5">
               <div class="rounded-circle mb-4">
-                <img src="./assets/img/theme/team-1-800x800.jpg"
-                  class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px" />
+              
+                  <img *ngIf="service.image !=='' && service.image !== null; else noImage" [src]="urlImage + service.image"
+                  class="img-center img-fluid shadow shadow-lg--hover" style="width: 75px" alt="Description de l'image"/>
+                  <ng-template #noImage>
+                    <img src="./assets/img/theme/team-1-800x800.jpg"
+                  class="img-center img-fluid shadow shadow-lg--hover" style="width: 75px" />
+                  </ng-template>
               </div>
-              <h6 class="text-primary text-uppercase">{{ service.nom }}</h6>
-              <p class="description mt-3">
-                Description: {{ service.description }}
-              </p>
+              <div class="text-center">
+                <h6 class="text-primary text-uppercase">{{ service.nom }}</h6>
+                <p class="description mt-3">
+                  Description: {{ service.description }}
+                </p>
 
-              <button (click)="open(classic1, 'modal_mini', 'sm', service)" class="btn btn-sm btn-outline-success">
-                Modifier
-              </button>
-              <button (click)="deleteService(service._id)" class="btn btn-sm btn-outline-warning">
-                Supprimer
-              </button>
+                <!-- <button (click)="open(classic1, 'modal_mini', 'sm', service)" class="btn btn-sm btn-outline-success">
+                  Modifier
+                </button> -->
+                <button (click)="toggleModifier(service)" class="btn btn-sm btn-outline-success">
+                  Modifier
+                </button>
+                <button (click)="deleteService(service._id)" class="btn btn-sm btn-outline-warning">
+                  Supprimer
+                </button>
+              </div>
             </div>
           </div>
         </div>
+
       </div>
     </div>
   </div>
 </div>
 <!-- </section> -->
+
+
+<section class="section section-shaped section-lg" *ngIf="estEnModeModification">
+  <div class="shape shape-style-1">
+    <span></span>
+    <span></span>
+    <span></span>
+    <span></span>
+    <span></span>
+    <span></span>
+    <span></span>
+    <span></span>
+  </div>
+  <div class="container pt-lg-md" #maSection>
+    <div class="row justify-content-center">
+      <div class="col-lg-5">
+        <div class="card bg-secondary shadow border-0">
+          <div class="card-body px-lg-5 py-lg-5">
+            <div class="text-center text-muted mb-4">
+              <small>Modifier Un Service</small>
+            </div>
+            <form #serviceForm="ngForm" (ngSubmit)="updateService()">
+              <div class="form-group mb-3">
+                <ngx-file-drop dropZoneLabel="Drop files here" (onFileDrop)="droppedUpdate($event, image)"
+                  (onFileOver)="fileOver($event)" (onFileLeave)="fileLeave($event)">
+                  <ng-template ngx-file-drop-content-tmp let-openFileSelector="openFileSelector">
+                    <div class="mr-1">Déposer votre image ici</div>
+                    <button type="button" class="btn btn-sm btn-outline-primary" (click)="openFileSelector()">Importer
+                      image</button>
+                  </ng-template>
+                </ngx-file-drop>
+              </div>
+              <div class="form-group mb-3" [ngClass]="{ focused: focus7 === true }">
+                <label for="intitule">Date début</label>
+                <div class="input-group input-group-alternative">
+                  <input *ngIf="dateDebutField !== ''" class="form-control datepicker" [placeholder]="dateDebutField"
+                    id="date" name="dp1" [(ngModel)]="dateDebutField" ngbDatepicker #d1="ngbDatepicker"
+                    (click)="d1.toggle()" (focus)="focus7 = true" (blur)="focus7 = false" type="text"
+                    autocomplete="off" />
+                  <input *ngIf="dateDebutField == ''" class="form-control datepicker" placeholder="Date début" id="date"
+                    name="dp1" [(ngModel)]="dateDebutField" ngbDatepicker #d1="ngbDatepicker" (click)="d1.toggle()"
+                    (focus)="focus7 = true" (blur)="focus7 = false" type="text" autocomplete="off" />
+                </div>
+              </div>
+              <div class="form-group mb-3" [ngClass]="{ focused: focus8 === true }">
+                <label for="intitule">Date fin</label>
+                <div class="input-group input-group-alternative">
+                  <input *ngIf="dateDebutField !== ''" class="form-control datepicker" [placeholder]="dateFinField"
+                    id="date" name="dp1" [(ngModel)]="dateFinField" ngbDatepicker #d1="ngbDatepicker"
+                    (click)="d1.toggle()" (focus)="focus8 = true" (blur)="focus8 = false" type="text"
+                    autocomplete="off" />
+                  <input *ngIf="dateDebutField == ''" class="form-control datepicker" placeholder="Date fin" id="date"
+                    name="dp1" [(ngModel)]="dateFinField" ngbDatepicker #d1="ngbDatepicker" (click)="d1.toggle()"
+                    (focus)="focus8 = true" (blur)="focus8 = false" type="text" autocomplete="off" />
+                </div>
+              </div>
+              <div class="form-group mb-3" [ngClass]="{ focused: focus2 === true }">
+                <label for="intitule">Intitulé</label>
+                <div class="input-group input-group-alternative">
+                  <input class="form-control" id="intitule" name="intitule" [(ngModel)]="intituleField" type="text" (focus)="focus2 = true"
+                    (blur)="focus2 = false" ngModel />
+                </div>
+              </div>
+              <div class="form-group mb-3" [ngClass]="{ focused: focus3 === true }">
+                <label for="description">Description</label>
+                <div class="input-group input-group-alternative">
+                  <textarea class="form-control" id="description" name="description" [(ngModel)]="descriptionField" type="text" (focus)="focus3 = true"
+                    (blur)="focus3 = false" maxlength="500" minlength="100" ngModel ></textarea>
+                </div>
+              </div>
+              <div class="form-group mb-3" [ngClass]="{ focused: focus4 === true }">
+                <label for="prix">Prix : en Ariary</label>
+                <div class="input-group input-group-alternative">
+                  <input class="form-control" id="prix" name="prix" type="text" [(ngModel)]="prixField" (focus)="focus4 = true"
+                    (blur)="focus4 = false" ngModel />
+                </div>
+              </div>
+              <div class="form-group mb-3" [ngClass]="{ focused: focus5 === true }">
+                <label for="duree">Durée : en Heures</label>
+                <div class="input-group input-group-alternative">
+                  <input class="form-control" id="duree" name="duree" type="text" [(ngModel)]="dureeField" (focus)="focus5 = true"
+                    (blur)="focus5 = false" ngModel />
+                </div>
+              </div>
+              <div class="form-group mb-3" [ngClass]="{ focused: focus6 === true }">
+                <label for="commission">Commission : en %</label>
+                <div class="input-group input-group-alternative">
+                  <input class="form-control" id="commission" name="commission" [(ngModel)]="commissionField" type="text" (focus)="focus6 = true"
+                    (blur)="focus6 = false" ngModel />
+                </div>
+              </div>
+
+              <div>
+                <div class="mb-3">
+                  <small class="text-uppercase font-weight-bold">Compétences requises :</small>
+                </div>
+                <div class="row">
+                  <div class="col-lg-4 col-sm-6 mt-4 mt-md-0" *ngFor="let competence of competencesField">
+                    <div class="custom-control custom-checkbox mb-3">
+                      <input class="custom-control-input" type="checkbox" id="competenceField{{ competence._id }}"
+                        [checked]="competence.isChecked" (change)="toggleCheckbox(competence)" />
+                      <label class="custom-control-label" for="competenceField{{ competence._id }}">
+                        <span>{{ competence.nomCompetence }}</span>
+                      </label>
+                    </div>
+                  </div>
+                </div>
+                </div>
+                <div *ngFor="let alert of alerts">
+                  <c-alert [type]="alert.type" [strong]="alert.strong" [message]="alert.message" [icon]="alert.icon"></c-alert>
+                </div>
+                
+                <c-alert color="danger" *ngIf="afficherAlerteDate">La date de début est postérieure à la date de fin.</c-alert>
+                <c-alert color="danger" *ngIf="afficherAlerteChamp">Veuillez remplir tous les champs.</c-alert>
+                <c-alert color="danger" *ngIf="afficherAlerteNumber">Numberrr.</c-alert>
+  
+
+              <div class="text-center">
+                <input type="submit" class="btn btn-primary my-4" value="Modifier" />
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+
 
 <!-- Modal -->
 <div class="col-md-4">
